@@ -30,17 +30,32 @@ endif
 
 if HAVE_MPI
   lib_LTLIBRARIES += libmpitrace.la libmpitracef.la
+if SINGLE_MPI_LIBRARY
+  lib_LTLIBRARIES += libmpitracecf.la
+endif
 if WANT_OPENMP
   lib_LTLIBRARIES += libompitrace.la libompitracef.la
+if SINGLE_MPI_LIBRARY
+  lib_LTLIBRARIES += libompitracecf.la
+endif
 endif
 if WANT_CUDAorCUPTI
   lib_LTLIBRARIES += libcudampitrace.la libcudampitracef.la
+if SINGLE_MPI_LIBRARY
+  lib_LTLIBRARIES += libcudampitracecf.la
+endif
 endif
 if WANT_SMPSS
   lib_LTLIBRARIES += libsmpssmpitrace.la libsmpssmpitracef.la
+if SINGLE_MPI_LIBRARY
+  lib_LTLIBRARIES += libsmpssmpitracecf.la
+endif
 endif
 if WANT_OPENCL
   lib_LTLIBRARIES += liboclmpitrace.la liboclmpitracef.la
+if SINGLE_MPI_LIBRARY
+  lib_LTLIBRARIES += liboclmpitracecf.la
+endif
 endif
 if WANT_NANOS
 endif
@@ -50,6 +65,9 @@ if HAVE_MPI
 if WANT_OPENMP
 if WANT_CUDAorCUPTI
   lib_LTLIBRARIES += libcudaompitrace.la libcudaompitracef.la
+if SINGLE_MPI_LIBRARY
+  lib_LTLIBRARIES += libcudaompitracecf.la
+endif
 endif
 endif
 endif
@@ -65,12 +83,18 @@ if WANT_NANOS
   lib_LTLIBRARIES += libnanostrace.la
 if HAVE_MPI
     lib_LTLIBRARIES += libnanosmpitrace.la libnanosmpitracef.la
+if SINGLE_MPI_LIBRARY
+  lib_LTLIBRARIES += libnanosmpitracecf.la
+endif
 endif
 endif
 if WANT_PTHREAD
   lib_LTLIBRARIES += libpttrace.la
 if HAVE_MPI
   lib_LTLIBRARIES += libptmpitrace.la libptmpitracef.la
+if SINGLE_MPI_LIBRARY
+  lib_LTLIBRARIES += libptmpitracecf.la
+endif
 endif
 endif
 
@@ -81,14 +105,26 @@ endif
 if GENERATE_LOAD_BALANCING
 if HAVE_MPI
   lib_LTLIBRARIES += libmpitrace-lb.la libmpitracef-lb.la
+if SINGLE_MPI_LIBRARY
+  lib_LTLIBRARIES += libmpitracecf-lb.la
+endif
 if WANT_OPENMP
   lib_LTLIBRARIES += libompitrace-lb.la libompitracef-lb.la
+if SINGLE_MPI_LIBRARY
+  lib_LTLIBRARIES += libompitracecf-lb.la
+endif
 endif
 if WANT_SMPSS
   lib_LTLIBRARIES += libsmpssmpitrace-lb.la libsmpssmpitracef-lb.la
+if SINGLE_MPI_LIBRARY
+  lib_LTLIBRARIES += libsmpssmpitracecf-lb.la
+endif
 endif
 if WANT_NANOS
   lib_LTLIBRARIES += libnanosmpitrace-lb.la libnanosmpitracef-lb.la
+if SINGLE_MPI_LIBRARY
+  lib_LTLIBRARIES += libnanosmpitracecf-lb.la
+endif
 endif
 endif
 endif
@@ -142,37 +178,69 @@ libcudatrace_la_SOURCES = $(core_SRCS) $(WRAPPERS_CUDA) $(auto_init_instr_SRCS) 
 libcudampitrace_la_SOURCES = $(core_SRCS) $(WRAPPERS_CUDA) $(auto_fini_instr_SRCS)
 libcudampitracef_la_SOURCES = $(libcudampitrace_la_SOURCES) extrae_mpif.h
 
+if SINGLE_MPI_LIBRARY
+  libcudampitracecf_la_SOURCES = $(libcudampitrace_la_SOURCES) extrae_mpif.h
+endif
+
 # OpenCL trace
 libocltrace_la_SOURCES = $(core_SRCS) $(WRAPPERS_OCL) $(auto_init_instr_SRCS) $(auto_fini_instr_SRCS)
 liboclmpitrace_la_SOURCES = $(core_SRCS) $(WRAPPERS_OCL) $(auto_fini_instr_SRCS)
 liboclmpitracef_la_SOURCES = $(liboclmpitrace_la_SOURCES) extrae_mpif.h
 
+if SINGLE_MPI_LIBRARY
+  liboclmpitracecf_la_SOURCES = $(liboclmpitrace_la_SOURCES) extrae_mpif.h
+endif
+
 # CUDA trace & MPItrace & OpenMP
 libcudaompitrace_la_SOURCES = $(core_SRCS) $(WRAPPERS_CUDA)
 libcudaompitracef_la_SOURCES = $(libcudaompitrace_la_SOURCES) extrae_mpif.h
+
+if SINGLE_MPI_LIBRARY
+  libcudaompitracecf_la_SOURCES = $(libcudaompitrace_la_SOURCES) extrae_mpif.h
+endif
 
 # MPItrace & Sequential trace
 libmpitrace_la_SOURCES = $(core_SRCS) $(auto_fini_instr_SRCS)
 libmpitracef_la_SOURCES = $(libmpitrace_la_SOURCES) extrae_mpif.h
 libseqtrace_la_SOURCES = $(core_SRCS) $(auto_init_instr_SRCS) $(auto_fini_instr_SRCS)
 
+if SINGLE_MPI_LIBRARY
+  libmpitracecf_la_SOURCES = $(libmpitrace_la_SOURCES) extrae_mpif.h
+endif
+
 libptmpitrace_la_SOURCES = $(core_SRCS) $(auto_fini_instr_SRCS)
 libptmpitracef_la_SOURCES = $(libptmpitrace_la_SOURCES) extrae_mpif.h
+
+if SINGLE_MPI_LIBRARY
+  libptmpitracecf_la_SOURCES = $(libptmpitrace_la_SOURCES) extrae_mpif.h
+endif
 
 # OpenMP & OpenMP + MPI
 libompitrace_la_SOURCES = $(libmpitrace_la_SOURCES)
 libompitracef_la_SOURCES = $(libmpitracef_la_SOURCES)
 libomptrace_la_SOURCES = $(core_SRCS) $(auto_init_instr_SRCS) $(auto_fini_instr_SRCS)
 
+if SINGLE_MPI_LIBRARY
+  libompitracecf_la_SOURCES = $(libmpitracecf_la_SOURCES)
+endif
+
 # SMPSS & SMPSS + MPI
 libsmpsstrace_la_SOURCES = $(core_SRCS) $(auto_fini_instr_SRCS)
 libsmpssmpitrace_la_SOURCES = $(libmpitrace_la_SOURCES)
 libsmpssmpitracef_la_SOURCES = $(libmpitracef_la_SOURCES)
 
+if SINGLE_MPI_LIBRARY
+  libsmpssmpitracecf_la_SOURCES = $(libmpitracecf_la_SOURCES)
+endif
+
 # Nanos
 libnanostrace_la_SOURCES = $(core_SRCS)
 libnanosmpitrace_la_SOURCES = $(core_SRCS)
 libnanosmpitracef_la_SOURCES = $(libnanosmpitrace_la_SOURCES) extrae_mpif.h
+
+if SINGLE_MPI_LIBRARY
+  libnanosmpitracecf_la_SOURCES = $(libnanosmpitrace_la_SOURCES) extrae_mpif.h
+endif
 
 # pthreads
 libpttrace_la_SOURCES = $(core_SRCS) $(auto_init_instr_SRCS) $(auto_fini_instr_SRCS)
@@ -189,6 +257,13 @@ libsmpssmpitrace_lb_la_SOURCES = $(libmpitrace_la_SOURCES)
 libsmpssmpitracef_lb_la_SOURCES = $(libmpitracef_la_SOURCES)
 libnanosmpitrace_lb_la_SOURCES = $(libnanosmpitrace_la_SOURCES)
 libnanosmpitracef_lb_la_SOURCES = $(libnanosmpitracef_la_SOURCES)
+
+if SINGLE_MPI_LIBRARY
+  libmpitracecf_lb_la_SOURCES = $(libmpitracecf_la_SOURCES)
+  libompitracecf_lb_la_SOURCES = $(libompitracecf_la_SOURCES)
+  libsmpssmpitracecf_lb_la_SOURCES = $(libmpitracecf_la_SOURCES)
+  libnanosmpitracecf_lb_la_SOURCES = $(libnanosmpitracecf_la_SOURCES)
+endif
 
 # For DynInst instrumentation
 lib_dyn_mpitracec_la_SOURCES = $(libmpitrace_la_SOURCES)
@@ -273,24 +348,25 @@ endif
 if HAVE_MPI
 
 if SINGLE_MPI_LIBRARY
-ADDITIONAL_MPI_LIBS_C = $(INTERFACES_LIB)/MPI/libiface_mpi.la \
+ADDITIONAL_MPI_LIBS_CF = $(INTERFACES_LIB)/MPI/libiface_mpicf.la \
  $(WRAPPERS_LIB)/MPI/libwrap_mpi_cf.la \
  $(STATS_LIB)/libmpistats.la \
  $(COMMON_MPI_LIB)/libcommon_mpi.la
-ADDITIONAL_MPI_LIBS_C_LB = $(INTERFACES_LIB)/MPI/libiface_mpi_lb.la \
+ADDITIONAL_MPI_LIBS_CF_LB = $(INTERFACES_LIB)/MPI/libiface_mpicf_lb.la \
  $(WRAPPERS_LIB)/MPI/libwrap_mpi_cf.la \
- $(STATS_LIB)/libmpistats.la \
- $(COMMON_MPI_LIB)/libcommon_mpi.la
-else
-ADDITIONAL_MPI_LIBS_C = $(INTERFACES_LIB)/MPI/libiface_mpi.la \
- $(WRAPPERS_LIB)/MPI/libwrap_mpi_c.la \
- $(STATS_LIB)/libmpistats.la \
- $(COMMON_MPI_LIB)/libcommon_mpi.la
-ADDITIONAL_MPI_LIBS_C_LB = $(INTERFACES_LIB)/MPI/libiface_mpi_lb.la \
- $(WRAPPERS_LIB)/MPI/libwrap_mpi_c.la \
  $(STATS_LIB)/libmpistats.la \
  $(COMMON_MPI_LIB)/libcommon_mpi.la
 endif
+
+ADDITIONAL_MPI_LIBS_C = $(INTERFACES_LIB)/MPI/libiface_mpi.la \
+ $(WRAPPERS_LIB)/MPI/libwrap_mpi_c.la \
+ $(STATS_LIB)/libmpistats.la \
+ $(COMMON_MPI_LIB)/libcommon_mpi.la
+ADDITIONAL_MPI_LIBS_C_LB = $(INTERFACES_LIB)/MPI/libiface_mpi_lb.la \
+ $(WRAPPERS_LIB)/MPI/libwrap_mpi_c.la \
+ $(STATS_LIB)/libmpistats.la \
+ $(COMMON_MPI_LIB)/libcommon_mpi.la
+
 ADDITIONAL_MPI_DYNLIBS_C = $(INTERFACES_LIB)/MPI/lib_dyn_iface_mpic.la \
  $(WRAPPERS_LIB)/MPI/libwrap_mpi_c.la \
  $(STATS_LIB)/libmpistats.la \
@@ -321,12 +397,24 @@ libcudatrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_CUDA_LIBS
 libcudampitrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_C) $(ADDITIONAL_CUDA_LIBS) $(PARALLEL_MERGE_LIB)
 libcudampitracef_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_F) $(ADDITIONAL_CUDA_LIBS) $(PARALLEL_MERGE_LIB)
 
+if SINGLE_MPI_LIBRARY
+  libcudampitracecf_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_CF) $(ADDITIONAL_CUDA_LIBS) $(PARALLEL_MERGE_LIB)
+endif
+
 libocltrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_OPENCL_LIBS) $(SEQUENTIAL_MERGE_LIB)
 liboclmpitrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_C) $(ADDITIONAL_OPENCL_LIBS) $(PARALLEL_MERGE_LIB)
 liboclmpitracef_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_F) $(ADDITIONAL_OPENCL_LIBS) $(PARALLEL_MERGE_LIB)
 
+if SINGLE_MPI_LIBRARY
+  liboclmpitracecf_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_CF) $(ADDITIONAL_OPENCL_LIBS) $(PARALLEL_MERGE_LIB)
+endif
+
 libcudaompitrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_C) $(ADDITIONAL_OPENMP_LIBS) $(ADDITIONAL_CUDA_LIBS) $(PARALLEL_MERGE_LIB)
 libcudaompitracef_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_F) $(ADDITIONAL_OPENMP_LIBS) $(ADDITIONAL_CUDA_LIBS) $(PARALLEL_MERGE_LIB)
+
+if SINGLE_MPI_LIBRARY
+  libcudaompitracecf_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_CF) $(ADDITIONAL_OPENMP_LIBS) $(ADDITIONAL_CUDA_LIBS) $(PARALLEL_MERGE_LIB)
+endif
 
 libseqtrace_la_LIBADD  = $(core_MODULES) $(INTERFACE_API) $(SEQUENTIAL_MERGE_LIB)
 libmpitrace_la_LIBADD  = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_C) $(PARALLEL_MERGE_LIB)
@@ -334,17 +422,34 @@ libmpitracef_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_
 libptmpitrace_la_LIBADD  = $(core_MODULES) $(INTERFACE_API_PTHREAD) $(ADDITIONAL_PTHREAD_LIBS) $(ADDITIONAL_MPI_LIBS_C) $(PARALLEL_MERGE_LIB)
 libptmpitracef_la_LIBADD = $(core_MODULES) $(INTERFACE_API_PTHREAD) $(ADDITIONAL_PTHREAD_LIBS) $(ADDITIONAL_MPI_LIBS_F) $(PARALLEL_MERGE_LIB)
 
+if SINGLE_MPI_LIBRARY
+  libmpitracecf_la_LIBADD  = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_CF) $(PARALLEL_MERGE_LIB)
+  libptmpitracecf_la_LIBADD  = $(core_MODULES) $(INTERFACE_API_PTHREAD) $(ADDITIONAL_PTHREAD_LIBS) $(ADDITIONAL_MPI_LIBS_CF) $(PARALLEL_MERGE_LIB)
+endif
+
 libompitrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_C) $(ADDITIONAL_OPENMP_LIBS) $(PARALLEL_MERGE_LIB)
 libompitracef_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_F) $(ADDITIONAL_OPENMP_LIBS) $(PARALLEL_MERGE_LIB)
 libomptrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_OPENMP_LIBS) $(SEQUENTIAL_MERGE_LIB)
+
+if SINGLE_MPI_LIBRARY
+  libompitracecf_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_CF) $(ADDITIONAL_OPENMP_LIBS) $(PARALLEL_MERGE_LIB)
+endif
 
 libsmpssmpitrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_C) $(PARALLEL_MERGE_LIB)
 libsmpssmpitracef_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_F) $(PARALLEL_MERGE_LIB)
 libsmpsstrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(SEQUENTIAL_MERGE_LIB)
 
+if SINGLE_MPI_LIBRARY
+  libsmpssmpitracecf_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_CF) $(PARALLEL_MERGE_LIB)
+endif
+
 libnanostrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(SEQUENTIAL_MERGE_LIB)
 libnanosmpitrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_C) $(PARALLEL_MERGE_LIB)
 libnanosmpitracef_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_F) $(PARALLEL_MERGE_LIB)
+
+if SINGLE_MPI_LIBRARY
+  libnanosmpitracecf_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_CF) $(PARALLEL_MERGE_LIB)
+endif
 
 libpttrace_la_LIBADD = $(core_MODULES) $(INTERFACE_API_PTHREAD) $(ADDITIONAL_PTHREAD_LIBS) $(SEQUENTIAL_MERGE_LIB)
 
@@ -355,11 +460,24 @@ libmpitracef_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LI
 libompitrace_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_C_LB) $(ADDITIONAL_OPENMP_LIBS) $(PARALLEL_MERGE_LIB)
 libompitracef_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_F_LB) $(ADDITIONAL_OPENMP_LIBS) $(PARALLEL_MERGE_LIB)
 
+if SINGLE_MPI_LIBRARY
+  libmpitracecf_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_CF_LB) $(PARALLEL_MERGE_LIB)
+  libompitracecf_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_CF_LB) $(ADDITIONAL_OPENMP_LIBS) $(PARALLEL_MERGE_LIB)
+endif
+
 libsmpssmpitrace_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_C_LB) $(PARALLEL_MERGE_LIB)
 libsmpssmpitracef_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_F_LB) $(PARALLEL_MERGE_LIB)
 
+if SINGLE_MPI_LIBRARY
+  libsmpssmpitracecf_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_CF_LB) $(PARALLEL_MERGE_LIB)
+endif
+
 libnanosmpitrace_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_C_LB) $(PARALLEL_MERGE_LIB)
 libnanosmpitracef_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_F_LB) $(PARALLEL_MERGE_LIB)
+
+if SINGLE_MPI_LIBRARY
+  libnanosmpitracecf_lb_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_LIBS_CF_LB) $(PARALLEL_MERGE_LIB)
+endif
 
 lib_dyn_mpitracec_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_DYNLIBS_C) $(PARALLEL_MERGE_LIB)
 lib_dyn_mpitracef_la_LIBADD = $(core_MODULES) $(INTERFACE_API) $(ADDITIONAL_MPI_DYNLIBS_F) $(PARALLEL_MERGE_LIB)
@@ -443,32 +561,64 @@ libcudatrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) $(SEQUENTIAL_CFLAGS_MER
 libcudampitrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DCUDA_SUPPORT $(WRAPPERS_CUDA_CFLAGS)
 libcudampitracef_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DCUDA_SUPPORT $(WRAPPERS_CUDA_CFLAGS)
 
+if SINGLE_MPI_LIBRARY
+  libcudampitracecf_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DCUDA_SUPPORT $(WRAPPERS_CUDA_CFLAGS)
+endif
+
 libocltrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) $(SEQUENTIAL_CFLAGS_MERGE_LIB) -DOPENCL_SUPPORT $(WRAPPERS_OCL_CFLAGS)
 liboclmpitrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DOPENCL_SUPPORT $(WRAPPERS_OCL_CFLAGS)
 liboclmpitracef_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DOPENCL_SUPPORT $(WRAPPERS_OCL_CFLAGS)
 
+if SINGLE_MPI_LIBRARY
+  liboclmpitracecf_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DOPENCL_SUPPORT $(WRAPPERS_OCL_CFLAGS)
+endif
+
 libcudaompitrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DCUDA_SUPPORT $(WRAPPERS_CUDA_CFLAGS) -DOMP_SUPPORT
 libcudaompitracef_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DCUDA_SUPPORT $(WRAPPERS_CUDA_CFLAGS) -DOMP_SUPPORT
+
+if SINGLE_MPI_LIBRARY
+  libcudaompitracecf_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DCUDA_SUPPORT $(WRAPPERS_CUDA_CFLAGS) -DOMP_SUPPORT
+endif
 
 libseqtrace_la_CFLAGS  = $(core_INCLUDES) $(core_CFLAGS) $(SEQUENTIAL_CFLAGS_MERGE_LIB)
 
 libmpitrace_la_CFLAGS  = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
 libmpitracef_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
 
+if SINGLE_MPI_LIBRARY
+  libmpitracecf_la_CFLAGS  = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
+endif
+
 libptmpitrace_la_CFLAGS  = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DPTHREAD_SUPPORT $(PTHREAD_CFLAGS)
 libptmpitracef_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DPTHREAD_SUPPORT $(PTHREAD_CFLAGS)
+
+if SINGLE_MPI_LIBRARY
+  libptmpitracecf_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DPTHREAD_SUPPORT $(PTHREAD_CFLAGS)
+endif
 
 libompitrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DOMP_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
 libompitracef_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DOMP_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
 libomptrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DOMP_SUPPORT $(SEQUENTIAL_CFLAGS_MERGE_LIB)
 
+if SINGLE_MPI_LIBRARY
+  libompitracecf_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DOMP_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
+endif
+
 libsmpssmpitrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DSMPSS_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
 libsmpssmpitracef_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DSMPSS_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
 libsmpsstrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DSMPSS_SUPPORT $(SEQUENTIAL_CFLAGS_MERGE_LIB)
 
+if SINGLE_MPI_LIBRARY
+  libsmpssmpitracecf_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DSMPSS_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
+endif
+
 libnanostrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DNANOS_SUPPORT $(SEQUENTIAL_CFLAGS_MERGE_LIB)
 libnanosmpitrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DNANOS_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
 libnanosmpitracef_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DNANOS_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
+
+if SINGLE_MPI_LIBRARY
+  libnanosmpitracecf_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DNANOS_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
+endif
 
 libpttrace_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DPTHREAD_SUPPORT $(SEQUENTIAL_CFLAGS_MERGE_LIB) $(PTHREAD_CFLAGS)
 
@@ -479,11 +629,24 @@ libmpitracef_lb_la_CFLAGS  = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI
 libompitrace_lb_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DOMP_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
 libompitracef_lb_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DOMP_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
 
+if SINGLE_MPI_LIBRARY
+  libmpitracecf_lb_la_CFLAGS  = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
+  libompitracecf_lb_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DOMP_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
+endif
+
 libsmpssmpitrace_lb_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DSMPSS_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
 libsmpssmpitracef_lb_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DSMPSS_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
 
+if SINGLE_MPI_LIBRARY
+  libsmpssmpitracecf_lb_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DSMPSS_SUPPORT -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
+endif
+
 libnanosmpitrace_lb_la_CFLAGS = $(libnanosmpitrace_la_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
 libnanosmpitracef_lb_la_CFLAGS = $(libnanosmpitracef_la_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
+
+if SINGLE_MPI_LIBRARY
+  libnanosmpitracecf_lb_la_CFLAGS = $(libnanosmpitracecf_la_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB)
+endif
 
 lib_dyn_mpitracec_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DDYNINST_MODULE
 lib_dyn_mpitracef_la_CFLAGS = $(core_INCLUDES) $(core_CFLAGS) -DMPI_SUPPORT $(MPI_CFLAGS) $(PARALLEL_CFLAGS_MERGE_LIB) -DDYNINST_MODULE
@@ -512,6 +675,15 @@ libompitrace_la_CFLAGS      += -DHAVE_ONLINE -I$(ONLINE_INC)
 libompitracef_la_CFLAGS     += -DHAVE_ONLINE -I$(ONLINE_INC)
 lib_dyn_mpitracec_la_CFLAGS += -DHAVE_ONLINE -I$(ONLINE_INC)
 lib_dyn_mpitracef_la_CFLAGS += -DHAVE_ONLINE -I$(ONLINE_INC)
+
+if SINGLE_MPI_LIBRARY
+  libmpitracecf_la_LIBADD       += $(ONLINE_LIB)/libonline.la
+  libompitracecf_la_LIBADD     += $(ONLINE_LIB)/libonline.la
+
+  libmpitracecf_la_CFLAGS       += -DHAVE_ONLINE -I$(ONLINE_INC)
+  libompitracecf_la_CFLAGS     += -DHAVE_ONLINE -I$(ONLINE_INC)
+endif
+
 endif
 
 #
@@ -536,33 +708,65 @@ COMMON_LINKER_FLAGS = \
 libcudaompitrace_la_LDFLAGS = $(COMMON_LINKER_FLAGS)
 libcudaompitracef_la_LDFLAGS = $(COMMON_LINKER_FLAGS)
 
+if SINGLE_MPI_LIBRARY
+  libcudaompitracecf_la_LDFLAGS = $(COMMON_LINKER_FLAGS)
+endif
+
 libseqtrace_la_LDFLAGS = $(COMMON_LINKER_FLAGS)
 
 libmpitrace_la_LDFLAGS = $(NEW_MPI_LIBS) $(COMMON_LINKER_FLAGS)
 libmpitracef_la_LDFLAGS = $(libmpitrace_la_LDFLAGS) # -static 
 
+if SINGLE_MPI_LIBRARY
+  libmpitracecf_la_LDFLAGS = $(libmpitrace_la_LDFLAGS) # -static 
+endif
+
 libptmpitrace_la_LDFLAGS = $(NEW_MPI_LIBS) $(COMMON_LINKER_FLAGS) $(PTHREAD_LIBS)
 libptmpitracef_la_LDFLAGS = $(libptmpitrace_la_LDFLAGS) # -static 
+
+if SINGLE_MPI_LIBRARY
+  libptmpitracecf_la_LDFLAGS = $(libptmpitrace_la_LDFLAGS) # -static 
+endif
 
 libcudatrace_la_LDFLAGS = $(COMMON_LINKER_FLAGS)
 libcudampitrace_la_LDFLAGS = $(libmpitrace_la_LDFLAGS)
 libcudampitracef_la_LDFLAGS = $(libmpitracef_la_LDFLAGS)
 
+if SINGLE_MPI_LIBRARY
+  libcudampitracecf_la_LDFLAGS = $(libmpitracecf_la_LDFLAGS)
+endif
+
 libocltrace_la_LDFLAGS = $(COMMON_LINKER_FLAGS)
 liboclmpitrace_la_LDFLAGS = $(libmpitrace_la_LDFLAGS)
 liboclmpitracef_la_LDFLAGS = $(libmpitracef_la_LDFLAGS)
+
+if SINGLE_MPI_LIBRARY
+  liboclmpitracecf_la_LDFLAGS = $(libmpitracecf_la_LDFLAGS)
+endif
 
 libomptrace_la_LDFLAGS = $(COMMON_LINKER_FLAGS)
 libompitrace_la_LDFLAGS = $(libmpitrace_la_LDFLAGS)
 libompitracef_la_LDFLAGS = $(libmpitracef_la_LDFLAGS)
 
+if SINGLE_MPI_LIBRARY
+  libompitracecf_la_LDFLAGS = $(libmpitracecf_la_LDFLAGS)
+endif
+
 libsmpsstrace_la_LDFLAGS = $(COMMON_LINKER_FLAGS)
 libsmpssmpitrace_la_LDFLAGS = $(libmpitrace_la_LDFLAGS)
 libsmpssmpitracef_la_LDFLAGS = $(libmpitracef_la_LDFLAGS)
 
+if SINGLE_MPI_LIBRARY
+  libsmpssmpitracecf_la_LDFLAGS = $(libmpitracecf_la_LDFLAGS)
+endif
+
 libnanostrace_la_LDFLAGS = $(COMMON_LINKER_FLAGS)
 libnanosmpitrace_la_LDFLAGS = $(libmpitrace_la_LDFLAGS)
 libnanosmpitracef_la_LDFLAGS = $(libmpitracef_la_LDFLAGS)
+
+if SINGLE_MPI_LIBRARY
+  libnanosmpitracecf_la_LDFLAGS = $(libmpitracecf_la_LDFLAGS)
+endif
 
 libpttrace_la_LDFLAGS = $(COMMON_LINKER_FLAGS) $(PTHREAD_LIBS)
 
@@ -573,11 +777,24 @@ libmpitracef_lb_la_LDFLAGS = $(libmpitracef_la_LDFLAGS) # -static
 libompitrace_lb_la_LDFLAGS = $(libompitrace_la_LDFLAGS)
 libompitracef_lb_la_LDFLAGS = $(libompitracef_la_LDFLAGS)
 
+if SINGLE_MPI_LIBRARY
+  libmpitracecf_lb_la_LDFLAGS = $(libmpitracecf_la_LDFLAGS) # -static
+  libompitracecf_lb_la_LDFLAGS = $(libompitracecf_la_LDFLAGS)
+endif
+
 libsmpssmpitrace_lb_la_LDFLAGS = $(libmpitrace_la_LDFLAGS)
 libsmpssmpitracef_lb_la_LDFLAGS = $(libmpitrace_lb_la_LDFLAGS) # -static
 
+if SINGLE_MPI_LIBRARY
+  libsmpssmpitracecf_lb_la_LDFLAGS = $(libmpitrace_lb_la_LDFLAGS) # -static
+endif
+
 libnanosmpitrace_lb_la_LDFLAGS = $(libnanosmpitrace_la_LDFLAGS)
 libnanosmpitracef_lb_la_LDFLAGS = $(libnanosmpitracef_la_LDFLAGS)
+
+if SINGLE_MPI_LIBRARY
+  libnanosmpitracecf_lb_la_LDFLAGS = $(libnanosmpitracecf_la_LDFLAGS)
+endif
 
 lib_dyn_mpitracec_la_LDFLAGS = $(libmpitrace_la_LDFLAGS)
 lib_dyn_mpitracef_la_LDFLAGS = $(libmpitrace_la_LDFLAGS)
